# RTCloud

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  pyproject.toml
docs/: architecture.md  manifest-v1.md  repository-format.md  snapshot-v1.md  sync-protocol-v1.md
docs/decisions/: 0001-content-addressing.md  0002-fixed-chunking-v0.md  0003-sqlite-index-v0.md
examples/: ingest_file.py  partial_restore.py  verify_repo.py
prototype/: chunker.py  cli.py  indexer.py  manifest.py  verifier.py
specs/: rtcloud.manifest.schema.json  rtcloud.ref.schema.json  rtcloud.snapshot.schema.json
src/rtcloud/: cli.py
src/rtcloud/core/: __init__.py  manifest.py  snapshot.py
src/rtcloud/export/: __init__.py  reconstruct.py
src/rtcloud/index/: __init__.py  sqlite_index.py
src/rtcloud/storage/: __init__.py  repository.py
src/rtcloud/stream/: __init__.py  reader.py
src/rtcloud/sync/: __init__.py  protocol.py
tests/: test_chunker.py  test_indexer.py  test_manifest.py  test_verifier.py
